# share-fair

./: .gitignore  README.md  cmd.sh  pyproject.toml
app/: backup.py  logger.py  static_values.py
